5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1723_2497.log
== TEST (2019-05-09 10:58:30) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (q1 > 0):
	x = ((qi * juros) / 1000) + q1
	qi = float(input("quantidade: "))
print(round(x, 2))

	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (q1 > 0):
NameError: name 'q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:59:10) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (qi > 0):
	x = ((qi * juros) / 1000) + q1
	qi = float(input("quantidade: "))
print(round(x, 2))

	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x = ((qi * juros) / 1000) + q1
NameError: name 'q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:59:33) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (qi > 0):
	x = ((qi * juros) / 1000) + qi
	qi = float(input("quantidade: "))
print(round(x, 2))

	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    qi = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:00:12) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (qi > 0):
	x = ((qi * juros) / 1000) + qi
print(round(x, 2))

	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    qi = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:00:19) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (qi > 0):
	x = ((qi * juros) / 1000) + qi
print(round(x, 2))

	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    qi = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:01:02) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (qi > 0):
	x = ((qi * 4.0) / 1000) + qi
print(round(x, 2))

	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    qi = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:04:35) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (qi > 0):
	x = ((qi * 4.0) / 1000) + qi
	saldo = saldo + x
print(round(x, 2))

	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    qi = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:04:55) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (qi > 0):
	x = ((qi * 4.0) / 1000) + qi
	saldo = saldo + x
print(round(saldo, 2))

	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    qi = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:05:00) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (qi > 0):
	x = ((qi * 4.0) / 1000) + qi
	saldo = saldo + x
print(round(saldo, 2))

	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    qi = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:15:12) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (tempo > 1 and t < tempo):
	rend = saldo + (juros /100)
	saldo = saldo + rend
	t = t + 1
	
	print(round(saldo, 2))
	
print(round(saldo, 2))

	


	

-- OUTPUT:
1150.54
2301.12
4602.28
9204.6
18409.24
36818.52
36818.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:17:11) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (tempo > 1 and t < tempo):
	rend = saldo + (juros /100)
	saldo = saldo + rend
	t = t + 1
	
	print(round(saldo, 2))

	


	

-- OUTPUT:
1150.54
2301.12
4602.28
9204.6
18409.24
36818.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:17:17) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (tempo > 1 and t < tempo):
	rend = saldo + (juros /100)
	saldo = saldo + rend
	t = t + 1
	
	print(round(saldo, 2))

	


	

-- OUTPUT:
1150.54
2301.12
4602.28
9204.6
18409.24
36818.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:17:32) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (tempo > 1 and t < tempo):
	rend = saldo + (juros /100)
	saldo = saldo + rend
	t = t + 1
print(round(saldo, 2))

	


	

-- OUTPUT:
36818.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:17:46) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (tempo > 1 and t < tempo):
	rend = saldo + (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))

	


	

-- OUTPUT:
1150.54
2301.12
4602.28
9204.6
18409.24
36818.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:18:17) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (tempo > 1 and t < tempo):
	rend = saldo * (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))

	


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:18:34) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (tempo > 1 and t < tempo):
	rend = saldo * (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))

	


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:18:48) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (tempo > 1 and t < tempo):
	rend = saldo * (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))

	


	

-- EXECUTION TIME:
0.136957
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:41:44) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(saldo)
	


	

-- OUTPUT:
598.26
622.1904
647.0780159999999
672.96113664
699.8795821056
727.874765389824
756.989756005417
787.2693462456336
818.760120095459
851.5105248992774
885.5709458952484
920.9937837310583
957.8335350803006
996.1468764835126
1035.992751542853
1077.4324616045672
1120.5297600687497
1165.3509504714998
1211.9649884903597
1260.443588029974
1310.861331551173
1363.2957848132198
1417.8276162057487
1474.5407208539787
1533.5223496881379
1594.8632436756634
1658.6577734226898
1725.0040843595975
1794.0042477339814
1865.7644176433407
1940.3949943490743
2018.0107941230372
2098.7312258879588
2182.680474923477
2269.987693920416
2360.7872016772326
2455.218689744322
2553.427437334095
2655.564534827459
2761.787116220557
2872.2586008693793
2987.1489449041546
3106.6349027003207
3230.9002988083334
3360.1363107606667
3494.541763191093
3634.323433718737
3779.6963710674863
3930.8842259101857
4088.119594946593
4251.644378744457
4421.710153894235
4598.578560050005
4782.521702452005
4973.822570550085
5172.775473372088
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 16:49:33) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 4)
	


	

-- EXECUTION TIME:
0.872324
-- ERROR:
  File "/home/codebench/codes/1723/2497/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 16:49:42) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 4)
	


	

-- EXECUTION TIME:
0.847514
-- ERROR:
  File "/home/codebench/codes/1723/2497/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 16:49:44) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 4)
	


	

-- EXECUTION TIME:
0.648406
-- ERROR:
  File "/home/codebench/codes/1723/2497/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 16:49:47) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 4)
	


	

-- EXECUTION TIME:
0.645348
-- ERROR:
  File "/home/codebench/codes/1723/2497/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 16:49:49) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 4)
	


	

-- EXECUTION TIME:
0.478712
-- ERROR:
  File "/home/codebench/codes/1723/2497/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 16:49:51) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 4)
	


	

-- EXECUTION TIME:
0.750954
-- ERROR:
  File "/home/codebench/codes/1723/2497/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 16:49:54) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 4)
	


	

-- EXECUTION TIME:
0.679638
-- ERROR:
  File "/home/codebench/codes/1723/2497/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 16:49:56) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 4)
	


	

-- EXECUTION TIME:
0.659889
-- ERROR:
  File "/home/codebench/codes/1723/2497/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 16:49:58) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 3)
	


	

-- EXECUTION TIME:
0.939562
-- ERROR:
  File "/home/codebench/codes/1723/2497/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 16:50:01) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 3)
	


	

-- EXECUTION TIME:
0.516508
-- ERROR:
  File "/home/codebench/codes/1723/2497/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 16:50:03) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 3)
	


	

-- EXECUTION TIME:
0.679934
-- ERROR:
  File "/home/codebench/codes/1723/2497/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 16:50:06) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 3)
	


	

-- EXECUTION TIME:
0.856171
-- ERROR:
  File "/home/codebench/codes/1723/2497/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 16:50:08) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 3)
	


	

-- EXECUTION TIME:
0.657371
-- ERROR:
  File "/home/codebench/codes/1723/2497/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 16:50:11) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 3)
	


	

-- EXECUTION TIME:
0.660992
-- ERROR:
  File "/home/codebench/codes/1723/2497/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 16:50:13) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, )
	


	

-- EXECUTION TIME:
0.515733
-- ERROR:
  File "/home/codebench/codes/1723/2497/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:50:52) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, )
	


	

-- ERROR:
File "XXXX", line 15
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:50:58) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, )
	


	

-- ERROR:
File "XXXX", line 15
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:51:14) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, )
-- ERROR:
File "XXXX", line 11
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:53:17) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2)
-- ERROR:
File "XXXX", line 11
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:53:53) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2))
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:56:46) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * (juros / 100)
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2))
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:56:47) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * (juros / 100)
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2))
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:56:47) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * (juros / 100)
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2))
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:56:48) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * (juros / 100)
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2))
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:56:48) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * (juros / 100)
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2))
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:56:48) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * (juros / 100)
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2))
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:56:49) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * (juros / 100)
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2))
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:56:50) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * (juros / 100)
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2))
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:00:08) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2))
-- EXECUTION TIME:
2838.94
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:00:09) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * (juros / 100)
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2))
-- EXECUTION TIME:
2937.22
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:00:09) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * (juros / 100)
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2))
-- EXECUTION TIME:
2825.53
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:00:09) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(saldo)
	


	

-- EXECUTION TIME:
2291.44
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:00:09) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(saldo)
	


	

-- EXECUTION TIME:
2248.16
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:00:09) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(saldo)
	


	

-- EXECUTION TIME:
2241.83
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:00:09) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(saldo)
	


	

-- EXECUTION TIME:
2579.29
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:00:10) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 0.04
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * juros
	saldo = renda + saldo
	t = t + 1
	print(saldo)
	


	

-- EXECUTION TIME:
1918.94
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:10:28) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * (juros / 100)
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2))
-- EXECUTION TIME:
0.026437
-- ERROR:
Error: No such container: sh

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:10:42) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi
while(tempo > 1 and tempo > 0):
	renda = saldo * (juros / 100)
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2))
-- EXECUTION TIME:
0.02406
-- ERROR:
Error: No such container: sh

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:11:12) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi
while(tempo > 1 and tempo > t):
	renda = saldo * (juros / 100)
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2))
-- EXECUTION TIME:
0.0257089
-- ERROR:
Error: No such container: sh

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:11:39) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi
while(tempo > 1 and t < tempo):
	renda = saldo * (juros / 100)
	saldo = renda + saldo
	t = t + 1
	print(round(saldo, 2))
-- EXECUTION TIME:
0.0260861
-- ERROR:
Error: No such container: sh

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:13:29) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi

while(tempo > 1 and t < tempo):
	rend = saldo * (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))
-- EXECUTION TIME:
0.0256519
-- ERROR:
Error: No such container: sh

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 18:13:33) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi

while(tempo > 1 and t < tempo):
	rend = saldo * (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:13:37) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
t = 0
saldo = qi

while(tempo > 1 and t < tempo):
	rend = saldo * (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))
-- EXECUTION TIME:
0.0264859
-- ERROR:
Error: No such container: sh

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:14:02) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
saldo = qi

t = 0

while(tempo > 1 and t < tempo):
	rend = saldo * (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))
-- EXECUTION TIME:
0.0265398
-- ERROR:
Error: No such container: sh

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:15:07) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
saldo = qi

t = 0

while (tempo > 1 and t < tempo):
	rend = saldo * (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))
-- EXECUTION TIME:
0.0279982
-- ERROR:
Error: No such container: sh

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:15:11) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
saldo = qi

t = 0

while (tempo > 1 and t < tempo):
	rend = saldo * (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))
-- EXECUTION TIME:
0.0267131
-- ERROR:
Error: No such container: sh

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 18:15:14) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
saldo = qi

t = 0

while (tempo > 1 and t < tempo):
	rend = saldo * (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:15:21) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
saldo = qi

t = 0

while (tempo > 1 and t < tempo):
	rend = saldo * (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))
-- EXECUTION TIME:
0.0263681
-- ERROR:
Error: No such container: sh

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:16:02) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
saldo = qi

t = 0

while (tempo > 1 and t < tempo):
	rend = saldo * (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))
-- EXECUTION TIME:
0.0201461
-- ERROR:
Error: No such container: sh

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:17:05) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (tempo > 1 and t < tempo):
	rend = saldo * (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))
-- EXECUTION TIME:
0.0292032
-- ERROR:
Error: No such container: sh

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 18:17:51) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (tempo > 1 and t < tempo):
	rend = saldo * (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 18:18:00) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (tempo > 1 and t < tempo):
	rend = saldo * (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:18:04) 
-- CODE:
qi = float(input("valor: "))
tempo = int(input("quantidade: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

t = 0
# Atualizacao de saldo
while (tempo > 1 and t < tempo):
	rend = saldo * (juros /100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))
-- EXECUTION TIME:
0.117937
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
